fix entry delete function
